// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should fire click event on button element 1`] = `
<DocumentFragment>
  <mock-styled.button
    aria-disabled="false"
    classname="mock-css."
    role="button"
  >
    <mock-styled.div />
    Button
  </mock-styled.button>
</DocumentFragment>
`;

exports[`Button should match snapshot 1`] = `
<DocumentFragment>
  <mock-styled.button
    aria-disabled="false"
    classname="mock-css."
    role="button"
  >
    <mock-styled.div />
    Button
  </mock-styled.button>
</DocumentFragment>
`;

exports[`Button should match snapshot for icon-only button 1`] = `
<DocumentFragment>
  <mock-styled.button
    aria-disabled="false"
    classname="mock-css. mock-css.
  padding: var(--spacing-2);
  , {
    margin: 0 0.125rem;
  }
"
    data-variant="primary"
    role="button"
  >
    <mock-styled.div />
    <mock-styled.span
      classname=""
    >
      <svg
        role="img"
        title="Icon image with name star"
      />
    </mock-styled.span>
  </mock-styled.button>
</DocumentFragment>
`;

exports[`Button should match snapshot with variant and icons 1`] = `
<DocumentFragment>
  <mock-styled.button
    aria-disabled="false"
    classname="mock-css."
    data-variant="primary"
    role="button"
  >
    <mock-styled.div />
    <mock-styled.span
      classname=""
    >
      <svg
        role="img"
        title="Icon image with name star"
      />
    </mock-styled.span>
    Button
    <mock-styled.span
      classname=""
    >
      <svg
        role="img"
        title="Icon image with name star"
      />
    </mock-styled.span>
  </mock-styled.button>
</DocumentFragment>
`;

exports[`DeprecatedButtonGroup should match snapshot for align center 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        role="button"
      >
        <mock-styled.div />
        1
      </mock-styled.button>
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        role="button"
      >
        <mock-styled.div />
        2
      </mock-styled.button>
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        role="button"
      >
        <mock-styled.div />
        3
      </mock-styled.button>
    </mock-styled.div>
  </mock-styled.div>
</DocumentFragment>
`;

exports[`DeprecatedButtonGroup should match snapshot for align left 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        role="button"
      >
        <mock-styled.div />
        1
      </mock-styled.button>
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        role="button"
      >
        <mock-styled.div />
        2
      </mock-styled.button>
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        role="button"
      >
        <mock-styled.div />
        3
      </mock-styled.button>
    </mock-styled.div>
  </mock-styled.div>
</DocumentFragment>
`;

exports[`DeprecatedButtonGroup should match snapshot for align right 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        role="button"
      >
        <mock-styled.div />
        1
      </mock-styled.button>
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        role="button"
      >
        <mock-styled.div />
        2
      </mock-styled.button>
      <mock-styled.button
        aria-disabled="false"
        classname="mock-css."
        role="button"
      >
        <mock-styled.div />
        3
      </mock-styled.button>
    </mock-styled.div>
  </mock-styled.div>
</DocumentFragment>
`;

exports[`FloatingButton should render FloatingButton with icon 1`] = `
<DocumentFragment>
  <mock-styled.button
    aria-disabled="false"
    classname="mock-css. mock-css. mock-css.
  padding: var(--spacing-2);
  , {
    margin: 0 0.125rem;
  }
"
    role="button"
  >
    <mock-styled.div />
    <mock-styled.span
      classname=""
    >
      <svg
        role="img"
        title="Icon image with name star"
      />
    </mock-styled.span>
  </mock-styled.button>
</DocumentFragment>
`;
